adding firebase dependency, and google services json

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,5 +122,8 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:$playServicesVersion"
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
 
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+
 
 }
