--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.3.72'
-    ext.navigationVersion = "2.2.0"
+    ext {
+        kotlin_version = '1.4.32'
+        kotlinVersion = '1.3.72'
+        navigationVersion = "2.2.0"
+    }
 
     repositories {
         google()
