--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,7 @@ dependencies {
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
 
 
 }
