--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         kotlin_version = '1.4.32'
         kotlinVersion = '1.3.72'
         navigationVersion = "2.2.0"
+        gradleVersion = "4.0.1"
+        googleServicesVersion = "4.3.3"
     }
 
     repositories {
@@ -13,10 +15,10 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath "com.google.gms:google-services:$googleServicesVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
